- Added the "gpu", "raja-gpu", and "ceed-gpu" backend aliases/shortcuts which
  automatically select between CUDA or HIP.
- The CUDA-specific names used by some of the unit tests like 'cunit_tests' and
  'pcunit_tests' were replaced by names using 'gpu' instead of 'c' (short for
  CUDA) or 'cuda'. These tests automatically run the CUDA/HIP tests based on the
  MFEM build configuration.


Version 4.8, released on Apr 9, 2025
====================================

Discretization improvements
---------------------------
- Added high-order basis functions on pyramid-shaped elements for all spaces in
  the de Rham complex based on the paper "Orientation embedded high order shape
  functions for the exact sequence elements of all shapes" by Fuentes, Keith,
  Demkowicz and Nagaraj (doi.org/10.1016/j.camwa.2015.04.027). Positive basis
  functions (Bernstein basis) for H1 and L2 on pyramids were also added.

- Added support for parallel p- and hp-refinement on quad/hex meshes. For hp, we
  currently support only isotropic refinement with L2 or H1 spaces. See the new
  miniapps hpref and phpref in the miniapps/meshing/ directory.

- Added several improvements for hyperbolic problems:
  * Assembly of Jacobians in HyperbolicFormIntegrator
  * Component-wise upwinded flux (ComponentwiseUpwindFlux)
  * Average fluxes in NumericalFlux (formerly RiemannSolver) and FluxFunction

- Added convenience methods to class FiniteElementSpace to directly identify all
  degrees of freedom on the exterior faces of the domain, without referencing
  boundary element attributes (GetExteriorVDofs and GetExteriorTrueDofs).

- Altered (Par)GridFunction::Compute*Error functions to ensure they return
  non-negative values and therefore behave as "norms".

- SubMesh and ParSubMesh have been extended to work on nonconforming meshes.
  Extracting volume and exterior surface submeshes are both supported.

- LinearFormIntegrator, BilinearFormIntegrator and NonlinearFormIntegrator now